--- a/src/main/res/layout/fragment_map.xml
+++ b/src/main/res/layout/fragment_map.xml
@@ -8,7 +8,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.MapFragment">
+    tools:context=".fragments.MapFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <com.google.android.gms.maps.MapView
