--- a/src/main/res/layout/fragment_home.xml
+++ b/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,7 +39,8 @@
                     android:id="@+id/rv_ultimos_registos"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="20dp"></androidx.recyclerview.widget.RecyclerView>
+                    android:layout_margin="20dp">
+                </androidx.recyclerview.widget.RecyclerView>
             </LinearLayout>
 
             <TextView
@@ -50,7 +51,9 @@
                 android:textColor="@color/white"
                 android:textSize="26sp"
                 android:textStyle="bold"
-                android:visibility="visible"></TextView>
+                android:visibility="visible">
+
+            </TextView>
 
             <LinearLayout
                 android:layout_width="match_parent"
